<resources>
    <string name="app_name">Бизнес-помощник</string>
    <string name="registration">Регистрация</string>
    <string name="news">Новости</string>
    <string name="finance">Финансы</string>
    <string name="tasks">Задачи</string>
    <string name="feedback">Обратная связь</string>
    <string name="catalog">Каталог</string>
    <string name="basket">Корзина</string>
    <string name="orders">Заказы</string>
    <string name="counterparties">Контрагенты</string>
    <string name="home">Главная</string>
    <string name="company">Предприятие</string>

    <string name="start">Start</string>
    <string name="close">Close</string>

    <string name="article1">Сырье и материалы</string>
    <string name="article2">Оплата труда</string>
    <string name="article3">Соц. нужды</string>
    <string name="article4">Армотизация</string>
    <string name="article5">Налоги</string>
    <string name="article6">Хранение</string>
    <string name="article7">Прочее</string>

        <string name="tic1">Внереализационные операции</string>
        <string name="tic2">Кредиты и займы</string>
        <string name="tic3">Выручка</string>
        <string name="tic4">Другое</string>


        <string name="te1">Аренда</string>
        <string name="te2">Амортизация</string>
        <string name="te3">Брак</string>
        <string name="te4">Заработная плата</string>
        <string name="te5">Социальные нужды</string>
        <string name="te6">Закупка сырья и материалов</string>
        <string name="te7">Транспортировка</string>
        <string name="te8">Налоги и сборы</string>
        <string name="te9">Маркетинг и реклама</string>
        <string name="te10">Прочие расходы</string>

</resources>